[package]
name = "punchball"
version = "0.1.0"
authors = [
    "Nathan Stocks <cleancut@github.com>",
    "Zac Stocks <thatsmr.socks@gmail.com",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.4.0"
#bevy = { path = "../bevy", version = "0.4.0" }
bevy = { git = "https://github.com/bevyengine/bevy", rev="f574c2c547c367aa7627647e372ead261ab553f3"} # 0.4.0 + my Text2dBundle contribution
#bevy = { git = "https://github.com/CleanCut/bevy", branch="text2d" }

# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
opt-level = 3
debug = false

# But compile the project itself in debug mode if `--release` is not passed in
[profile.dev.package.punchball]
opt-level = 0
debug = true
