[package]
name = "punchball"
version = "0.1.0"
authors = [
    "Nathan Stocks <cleancut@github.com>",
    "Zac Stocks <thatsmr.socks@gmail.com",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1" }

# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
opt-level = 3
debug = false

# But compile the project itself in debug mode if `--release` is not passed in
[profile.dev.package.punchball]
opt-level = 0
debug = true
